# LLM-crossword

./: README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
configs/: digital_data_etl_test.yaml  end_to_end_data.yaml  feature_engineering.yaml
cw_llm/: __init__.py  settings.py
cw_llm/application/crawlers/: base.py
cw_llm/application/networks/: embeddings.py
cw_llm/application/utils/: split_user_full_name.py
cw_llm/domain/: __init__.py  documents.py  exceptions.py
cw_llm/domain/base/: nosql.py  vector.py
cw_llm/infrastructure/db/: mongo.py  qdrant.py
llm_engineering/: settings.py
llm_engineering/application/crawlers/: __init__.py  dispatcher.py  xw.py
llm_engineering/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_engineering/application/preprocessing/operations/: __init__.py  chunking.py  cleaning.py
llm_engineering/domain/: chunks.py  cleaned_documents.py  documents.py  embedded_chunks.py  types.py
steps/: __init__.py
steps/etl/: crawl_links.py
steps/feature_engineering/: query_data_warehouse.py
walkthroughs/: etl.ipynb
