[tool.poetry]
name = "llm-crossword"
version = "0.1.0"
description = "package for fine tuning LLMs to solve and create crosswords"
authors = ["dknapp <github.com/dknapp17>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
ipykernel = "^6.29.5"


[tool.poetry.group.orchestration.dependencies]
zenml = "^0.71.0"


[tool.poetry.group.logging.dependencies]
loguru = "^0.7.3"
tqdm = "^4.67.1"


[tool.poetry.group.db.dependencies]
pymongo = "^4.10.1"


[tool.poetry.group.LLM.dependencies]
sentence-transformers = "^3.3.1"
langchain = "^0.3.13"
langchain-community = "^0.3.13"


[tool.poetry.group.vector_db.dependencies]
qdrant-client = "^1.12.2"


[tool.poetry.group.scraping.dependencies]
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
